Fixing popover overflow

--- a/app/popover/popover.component.scss
+++ b/app/popover/popover.component.scss
@@ -3,6 +3,7 @@
   background: white;
   border-radius: 4px;
   padding: 20px;
+  overflow: auto;
 }
 
 .arrow {
